--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ header.menu-open {
   font-size: 12px;
   letter-spacing: 6px;
   color: #fff;
-  font-weight: 300;
+  font-weight: 700;
   margin-left: 2px;
 }
 
@@ -75,7 +75,7 @@ nav {
 nav a {
   color: #ffffff;
   text-decoration: none;
-  font-weight: 300;
+  font-weight: 700;
 }
 
 .menu-toggle {
@@ -257,7 +257,7 @@ nav a {
   position: absolute;
   width: 68px;
   height: 48px;
-  background: url('https://img.icons8.com/ios-filled/100/play-button-circled--v1.png') no-repeat center;
+  background: url('img/icons/play-btn.png') no-repeat center;
   background-size: contain;
   top: 50%;
   left: 50%;
@@ -274,7 +274,7 @@ nav a {
   display: inline-block;
   margin: 10px;
   color: #ff0000;
-  font-weight: 500;
+  font-weight: 700;
   text-decoration: none;
 }
 
@@ -285,7 +285,7 @@ nav a {
   background-color: #ff0000;
   color: #ffffff;
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 700;
   border-radius: 5px;
 }
 
