--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,10 @@ nav a {
   transition: 0.3s;
 }
 
+.menu-toggle span:focus {
+  outline: 2px solid #ff0000;
+}
+
 .mobile-nav {
   display: none;
   flex-direction: column;
@@ -118,6 +122,13 @@ nav a {
   color: #fff;
   text-decoration: none;
   border-top: 1px solid #333;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin: 0 0 1rem;
+  font-weight: 700;
+  line-height: 1.2;
 }
 
 .hero {
